Fix icons on firefox

--- a/assets/css/intro.scss
+++ b/assets/css/intro.scss
@@ -52,25 +52,39 @@
 			}
 
 			a {
-				background-image: url('../../assets/img/iconbase.png');
+				background-image: url('../../assets/img/icons.png');
 				height: 38px;
 				width: 40px;
 				display: inline-block;
 
 				&:hover {
-					background-image: url('../../assets/img/iconhover.png');
+					&.github {
+						background-position: 0 38px;
+					}
+
+					&.email {
+						background-position: -40px 38px;
+					}
+
+					&.tumblr {
+						background-position: -80px 38px;
+					}
+
+					&.twitter {
+						background-position: -120px 38px;
+					}
 				}
 
 				&.email {
-					background-position-x: -40px;
+					background-position: -40px 0;
 				}
 
 				&.tumblr {
-					background-position-x: -80px;
+					background-position: -80px 0;
 				}
 
 				&.twitter {
-					background-position-x: -120px;
+					background-position: -120px 0;
 				}
 			}
 		}
